New in master
=============

Features
--------

Bugfixes
--------

* Fix the ``nikola plugin`` command not working (Issue #3736)

New in v8.3.0
=============

Features
--------

* Implement a new plugin manager from scratch to replace Yapsy,
  which does not work on Python 3.12 due to Python 3.12 carelessly
  removing parts of the standard library (Issue #3719)
* Support for Discourse as comment system (Issue #3689)

Bugfixes
--------

* Fix loading of templates from plugins with ``__init__.py`` files
  (Issue #3725)
* Fix margins of paragraphs at the end of sections (Issue #3704)
* Ignore ``.DS_Store`` files in listing indexes (Issue #3698)
* Fix baguetteBox.js invoking in the base theme (Issue #3687)
* Fix development (preview) server ``nikola auto``
  for non-root SITE_URL, in particular when URL_TYPE is full_path.
  (Issue #3715)

For plugin developers
---------------------

Nikola now requires the ``.plugin`` file to contain a ``[Nikola]``
section with a ``PluginCategory`` entry set to the name of the plugin
category class. This was already required by ``plugins.getnikola.com``,
but you may have custom plugins that don’t have this set.

New in v8.2.4
=============

Features
--------

* Add a ``-q``, ``--ignore-query-strings`` option to ignore query strings
  for internal links, allowing their use for cache busting
* Update reST stylesheets (Issue #3657)
* Add a ``--timeout`` parameter to the ``check`` plugin, defaulting to
  30s. (Issue #3643)
* GZIP compression is now deterministic for automatic deploys (Issue #3650)

Bugfixes
--------

* Fix failures to build with a "Document is empty" error in default themes
  (Issue #3679)
* Fix ``PAGE_INDEX`` skipping generation when there exists a conflicting post
* Fix RSS generation of galleries containing WebP images, which caused
  an unhandled exception due to not having a known MIME type (Issue #3671)
* Fix ``auto`` command infinite loop (Issue #3677)
* Fix API URL in CSS and JS minifiers (Issue #3658)