@@ -7,6 +7,7 @@ Features
 Bugfixes
 --------
 
+* Fix the new plugin manager not loading plugins if the plugin folder is a symlink (Issue #3741)
 * Fix the ``nikola plugin`` command not working (Issue #3736)
 
 New in v8.3.0
